Fix stock name word wrap issue

--- a/src/sidebars/sidebar.less
+++ b/src/sidebars/sidebar.less
@@ -108,7 +108,7 @@
   margin-top: 15px;
 }
 
-#stockName {
+.stock-name {
   white-space: nowrap;
   width: 155px;
   overflow: hidden;
